--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 h1  {
+    
     background-color: slategrey;
     font-size: 50px;
+    color: darkred
 }
 
 h2 {
-    font-size: 20px
+    font-size: 30px
+    
 }
 
 p {
-    font-size: 10px
+    font-size: 20px;
+    color: blue;
+    font-family: cursive
+
+    
     
 }
