--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,36 @@
 *{
-  border-width: 2px;
-  border-style: solid;
-  border-color: black;
+    background-color: white;
+  
+}
+
+.nav-items li {
+    display: inline;
+    margin: 35px;
+    padding: 25px;
+    text-align: center;
 }
 
 h1  { 
-  background-color: slategrey;
-  font-size: 40px;
-  color: darkred;
-  text-align: center;
+    background-color: slategrey;
+    font-size: 40px;
+    color: darkred;
+    text-align: center;
+    padding: 10px
 }
 
 h2 {
-  font-size: 30px;  
-  text-align: center;
+    font-size: 30px;  
+    text-align: center;
+}
+
+.main-para{
+    font-size: 20px;
+    color: darkblue;
 }
 
 p {
-  font-size: 20px;
-  color: blue;
-  font-family: cursive   
-}
-
-ol {
-  display: block;
-  list-style-type: decimal;
-
+    font-size: 15px;
+    color: blue;
+    font-family: Gerogia, serif;   
 }
 
